objects/TelosTouch_API_Settings__c/TelosTouch_API_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>TelosTouch API Settings</description>
    <label>TelosTouch API Settings</label>
</CustomObject>