objects/TelosTouch_API_Settings__c/fields/Client_id_username__c.field-meta.xml
<CustomField>
    <fullName>Client_id_username__c</fullName>
    <label>Client_id/username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>