objects/TelosTouch_API_Settings__c/fields/Client_secret_password__c.field-meta.xml
<CustomField>
    <fullName>Client_secret_password__c</fullName>
    <label>Client_secret/password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>