objects/TelosTouch_API_Settings__c/fields/ConfigPageVisibale__c.field-meta.xml
<CustomField>
    <fullName>ConfigPageVisibale__c</fullName>
    <description>To add profile name in this field for visible configuration page to that profile user</description>
    <label>ConfigPageVisible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>