objects/TelosTouch_API_Settings__c/fields/ForUpdateExistingRecords__c.field-meta.xml
<CustomField>
    <fullName>ForUpdateExistingRecords__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ForUpdateExistingRecords</label>
    <type>Checkbox</type>
</CustomField>