objects/TelosTouch_API_Settings__c/fields/Instance_url__c.field-meta.xml
<CustomField>
    <fullName>Instance_url__c</fullName>
    <description>Basic URL</description>
    <label>Instance url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>